--- a/tenis_roxo.html
+++ b/tenis_roxo.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tenis Nike Roxo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <h1>Tênis Nike Flex Experience 12 Feminino</h1>
-    <h2>Preço: 399,99</h2>
-    <h2>Descrição:</h2>
-    <p>Estilo clean com um toque de personalidade. O branco com roxo traz leveza e atitude no mesmo par.</p>
+    <div id="card">
+        <h1>Tênis Nike Flex Experience 12 Feminino</h1>
+        <img src="imagens/tenis_roxo.png" alt="tenis_roxo">
+        <div id="conteudo_esquerda">
+            <h2>Preço: <span id="destaque">399,99</span></h2> <br>
+            <p id="descricao">Descrição:</p>
+            <p id="descricao_tenis">Estilo clean com um toque de personalidade. O branco com roxo traz leveza e atitude no mesmo par.</p>
+        </div>
 
-    <img src="imagens/tenis_roxo.png" alt="tenis_roxo">
-    
-    <a href="">COMPRAR</a>
+        <a href="">COMPRAR</a>
+    </div>
 </body>
 </html>
