começei a criar as bolinhas

--- a/tenis_roxo.html
+++ b/tenis_roxo.html
@@ -11,13 +11,20 @@
     <div id="card">
         <h1>Tênis Nike Flex Experience 12 Feminino</h1>
         <img src="imagens/tenis_roxo.png" alt="tenis_roxo">
+
+       <div class="botoes-cores<a href="tenis-branco.html" class="bolinha branca"></a>
+  <a href="tenis-lilas.html" class="bolinha lilas"></a>
+  <a href="tenis-cinza.html" class="bolinha cinza"></a>
+  <a href="tenis-preto.html" class="bolinha preto"></a>
+</div>
+
         <div id="conteudo_esquerda">
             <h2>Preço: <span id="destaque">399,99</span></h2> <br>
             <p id="descricao">Descrição:</p>
             <p id="descricao_tenis">Estilo clean com um toque de personalidade. O branco com roxo traz leveza e atitude no mesmo par.</p>
         </div>
 
-        <a href="">COMPRAR</a>
+        <a href="" id="botao">COMPRAR</a>
     </div>
 </body>
 </html>
