fiz as bolinhas

--- a/tenis_roxo.html
+++ b/tenis_roxo.html
@@ -12,10 +12,11 @@
         <h1>Tênis Nike Flex Experience 12 Feminino</h1>
         <img src="imagens/tenis_roxo.png" alt="tenis_roxo">
 
-       <div class="botoes-cores<a href="tenis-branco.html" class="bolinha branca"></a>
-  <a href="tenis-lilas.html" class="bolinha lilas"></a>
-  <a href="tenis-cinza.html" class="bolinha cinza"></a>
-  <a href="tenis-preto.html" class="bolinha preto"></a>
+       <div id="botoes-nav">        
+           <a href="tenis-branco.html" class="bolinha branca"></a>
+           <a href="tenis-roxo.html"   class="bolinha roxa"></a>
+           <a href="tenis-cinza.html"  class="bolinha cinza"></a>
+           <a href="tenis-preto.html"  class="bolinha preta"></a>
 </div>
 
         <div id="conteudo_esquerda">
