--- a/tenis_cinza.html
+++ b/tenis_cinza.html
@@ -6,16 +6,16 @@
 
 
     <title>Tenis Nike Roxo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylec.css">
 </head>
 <body>
     
     <div id="card">
         <h1>Tênis Nike Flex Experience 12 Feminino</h1>
-        <img src="imagens/tenis_roxo.png" alt="tenis_roxo">
+        <img src="imagens/tenis_cinza.png" alt="tenis_cinza">
 
        <div id="botoes-nav">        
-            <a href="tenis_branco.html" class="bolinha branca"></a>
+           <a href="tenis_branco.html" class="bolinha branca"></a>
            <a href="tenis_roxo.html"   class="bolinha roxa"></a>
            <a href="tenis_cinza.html"  class="bolinha cinza"></a>
            <a href="tenis_preto.html"  class="bolinha preta"></a>
@@ -24,7 +24,7 @@
         <div id="conteudo_esquerda">
             <h2>Preço: <span id="destaque">399,99</span></h2> <br>
             <p id="descricao">Descrição:</p>
-            <p id="descricao_tenis">Estilo clean com um toque de personalidade. O branco com roxo traz leveza e atitude no mesmo par.</p>
+            <p id="descricao_tenis">Leve e moderno. O tom cinza é neutro e perfeito pra looks casuais ou treinos com conforto.</p>
         </div>
 
         <a href="" id="botao">COMPRAR</a>
